Blog jump fix

--- a/source/style/common/_init.sass
+++ b/source/style/common/_init.sass
@@ -262,7 +262,7 @@ button
 	margin: 0
 	padding: 0
 	list-style: none
-	z-index: 10
+	z-index: 5
 	&__item
 		display: inline-block
 		margin: 0 12px
